# music-player

./: LICENSE  pyproject.toml
src/music_player/core/: constants.py  main.py
src/music_player/core/abstractions/: player.py
src/music_player/core/authentication/: __init__.py  authentication_result.py  authentication_strategy.py  code_authentication_strategy.py  link_authentication_strategy.py
src/music_player/core/authentication/strategies/: __init__.py  code_authentication_strategy.py  link_authentication_strategy.py
src/music_player/core/music/: __init__.py
src/music_player/core/music/abstractions/: __init__.py  music_provider.py  player.py  provider.py  queue.py
src/music_player/core/music/enums/: __init__.py  playback_status.py  repeat_mode.py  track_type.py
src/music_player/core/music/exceptions/: __init__.py  already_playing_error.py  not_playing_error.py  position_out_of_bounds_error.py  queue_out_of_bounds_error.py  volume_out_of_bounds_error.py
src/music_player/core/music/models/: __init__.py  album.py  artist.py  playable.py  playable_container.py  playlist.py  radio.py  search_result.py  track.py  track_container.py  track_metadata.py
src/music_player/core/music/plugin_definitions/: __init__.py  provider.py
src/music_player/core/plugin_manager/: __init__.py  base_plugin.py  plugin_context.py  plugin_definition.py  plugin_manager.py
src/music_player/core/plugin_manager/exceptions/: __init__.py  plugin_already_registered_error.py  unknown_plugin_type_error.py
src/music_player/core/utils/: __init__.py  event_listener.py  event_manager.py
src/music_player/plugin/coreplugin/: __init__.py
src/music_player/plugin/coreplugin/providers/: tidal.py
