[project]
name = "music-player"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Bennet Ranft", email = "bennet@ranft.ing" },
]
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "assertpy>=1.1",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.2",
    "types-assertpy>=1.1.0.20240712",
]

[project.gui-scripts]
music-player = "music_player.core:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/music_player"]

[tool.ruff]
line-length = 120
exclude = [
    ".mypy_stubs"
]

[tool.ruff.lint]
select = ["ALL"]
unfixable = [
    "ERA001", # Commented out code
]
ignore = [
    "D203",   # Would put a blank line before class docstrings
    "D212",   # Would put the summary on the same line as the docstring qoutes
    "COM812", # Conflicts with formatter
    "FIX002", # Prevents TODO comments
    "TD002",  # Prevents authorless TODO comments
]
flake8-quotes.inline-quotes="single"

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.mypy]
mypy_path = ".mypy_stubs"
strict = true
